--- a/photoapp/templates/navbar.html
+++ b/photoapp/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'photo:list' %}">Photo App</a>
+      <a class="navbar-brand" href="{% url 'photo:list' %}">Photo Management Portal</a>
       <button
         class="navbar-toggler"
         type="button"
